2013-XX-XX Jan Kotanski <jankotan@gmail.com>
	* adding decoder for UTF8 and INT32 ecoded data
	* fixing storing attributes in FieldArrays
	* fixing shape finding and FetchNameHandler conditions 
	* fixing shape order in Tango DataSource
	* tagged as 1.0.X


2012-12-18 Jan Kotanski <jankotan@gmail.com>
	* adding compression, i.e. attributes to strategy tag
	* updating README
	* adding support for int8, int16  and ISO8601 types
	* adding unittest for scalar integer counters 
	* changing Tango states: OPEN -> EXTRACT, INIT -> OPEN
	* tagged as 1.0.6

2012-11-28 Jan Kotanski <jankotan@gmail.com>
	* adding flush of h5 file in close entry
	* adding support for boolean true/false values in XML
	* adding support for different chunks, i.e. defining arbitrary growing dimension
	* adding reading from XML string multi-dimension values of the fields and attributes
	* tagged as 1.0.5

2012-11-27 Jan Kotanski <jankotan@gmail.com>
	* adding support for attribute datasources
	* fixing reading from JSON string the client datasource
	* tagged as 1.0.4

2012-11-23 Jan Kotanski <jankotan@gmail.com>
	* adding a factory for external datasources
	* fixing the decoder pool for external decoders
	* tagged as 1.0.3

2012-11-20 Jan Kotanski <jankotan@gmail.com>
	* adding datasource name into XMLCreator
	* tagged as 1.0.2

2012-11-20 Jan Kotanski <jankotan@gmail.com>
	* added decoders
	* bug fixes
	* tagged as 1.0.1

2012-10-30 Jan Kotanski <jankotan@gmail.com>
	* the first tag
	* tagged as 1.0

2012-06-07 Jan Kotanski <jankotan@gmail.com>
	* ChangeLog: creating develop branch

	